--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,10 @@
   <string name="navigation_drawer_open">Open navigation drawer</string>
   <string name="navigation_drawer_close">Close navigation drawer</string>
   <string name="action_settings">Settings</string>
+  <string name="language_all">all</string>
   <string name="language_java">java</string>
   <string name="language_oc">Object-C</string>
+  <string name="language_swift">swift</string>
   <string name="language_c">C</string>
   <string name="language_cpp">C++</string>
   <string name="language_php">php</string>
@@ -15,4 +17,5 @@
   <string name="language_shell">shell</string>
   <string name="loading">加载中…</string>
   <string name="error_search_github">查询数据失败,请重试</string>
+  <string name="stars">%s·stars</string>
 </resources>
