--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
   <string name="language_c_sharp">c#</string>
   <string name="language_shell">shell</string>
   <string name="loading">加载中…</string>
-  <string name="error_search_github">查询数据失败,请重试</string>
   <string name="stars">%s·stars</string>
+  <string name="hint_input_keyword">请输入关键字</string>
+  <string name="error_search_github">查询数据失败,请重试</string>
 </resources>
