1、修改搜索条件数据结构  2、结构优化  3、输入框支持点击×直接清空

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
   <string name="language_shell">shell</string>
   <string name="loading">加载中…</string>
   <string name="stars">%s·stars</string>
-  <string name="hint_input_keyword">请输入关键字</string>
+  <string name="hint_input_keyword">输入关键字搜索</string>
   <string name="error_search_github">查询数据失败,请重试</string>
+  <string name="no_data">暂无数据</string>
 </resources>
