--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
   <string name="loading_failure">数据加载失败/(ㄒoㄒ)/~~</string>
   <string name="stars">%d·stars</string>
   <string name="hint_input_keyword">输入关键字搜索</string>
-  <string name="error_search_github">查询数据失败,请重试</string>
+  <string name="error_search_failure">查询数据失败,请重试</string>
   <string name="no_data">暂无数据</string>
   <string name="tip_copy_success">已复制</string>
   <string name="tip_collect_success">已收藏</string>
