--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
   <string name="navigation_drawer_close">Close navigation drawer</string>
   <string name="action_settings">Settings</string>
   <string name="username_github">github账号</string>
+  <string name="password_github">github密码</string>
+  <string name="login">登录</string>
   <string name="confirm">确定</string>
   <string name="cancel">取消</string>
   <string name="nav_about">关于</string>
@@ -30,12 +32,15 @@
   <string name="hint_input_keyword">输入关键字搜索</string>
   <string name="error_search_failure">查询数据失败,请重试</string>
   <string name="no_data">暂无数据</string>
+  <string name="login_just_browsing">仅输入账号查看</string>
   <string name="tip_copy_success">已复制</string>
   <string name="tip_collect_success">已收藏</string>
   <string name="tip_collect_cancel_success">已取消收藏</string>
   <string name="error_collect_failure">收藏失败,请重新收藏</string>
   <string name="error_collect_cancel_failure">取消收藏失败,请重新取消</string>
   <string name="error_main_load_failure">数据加载失败/(ㄒoㄒ)/~~\n点击重新加载</string>
-  <string name="error_username_null">用户名必须填写</string>
+  <string name="error_username_null">账号不能为空</string>
+  <string name="error_password_null">密码不能为空</string>
   <string name="error_network_error">网络错误,请重试</string>
+  <string name="error_need_login">请先登录</string>
 </resources>
