1、完善登录操作

--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -56,4 +56,5 @@
   <string name="error_username_null">Username can\'t be null</string>
   <string name="error_network_error">Network error, retry please</string>
   <string name="error_need_login">Need Login</string>
+  <string name="error_login_failure">Login failure, please check you username or password</string>
 </resources>
