--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
   <string name="error_password_null">密码不能为空</string>
   <string name="error_network_error">网络错误,请重试</string>
   <string name="error_need_login">请先登录</string>
+  <string name="error_login_failure">登录失败，请检查用户名密码</string>
 </resources>
