--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -17,6 +17,7 @@
   <string name="app_name">open source</string>
   <string name="title_collect">Collected</string>
   <string name="title_stars">Stars</string>
+  <string name="title_user_info">Information</string>
   <string name="navigation_drawer_open">Open navigation drawer</string>
   <string name="navigation_drawer_close">Close navigation drawer</string>
   <string name="action_settings">Settings</string>
