1、修改登录后的页面显示； 2、添加关于页面； 3、添加EventBus

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
   <string name="title_collect">收藏</string>
   <string name="title_stars">Stars</string>
   <string name="title_user_info">用户信息</string>
+  <string name="title_about">关于作者</string>
   <string name="navigation_drawer_open">Open navigation drawer</string>
   <string name="navigation_drawer_close">Close navigation drawer</string>
   <string name="action_settings">Settings</string>
