--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -18,6 +18,7 @@
   <string name="title_collect">Collected</string>
   <string name="title_stars">Stars</string>
   <string name="title_user_info">Information</string>
+  <string name="title_about">About</string>
   <string name="navigation_drawer_open">Open navigation drawer</string>
   <string name="navigation_drawer_close">Close navigation drawer</string>
   <string name="action_settings">Settings</string>
