--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,9 @@
   <string name="error_network_error">网络错误,请重试</string>
   <string name="error_need_login">请先登录</string>
   <string name="error_login_failure">登录失败，请检查用户名密码</string>
+  <string name="repo_detail_owner">开源作者：%s</string>
+  <string name="repo_detail_language">语言：%s</string>
+  <string name="repo_detail_url">url：%s</string>
+  <string name="repo_detail_description">详情描述：</string>
+  <string name="repo_detail_latest_commit">最近一次提交：%s</string>
 </resources>
